--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
 
   <ion-content>
 
-    <img src="assets/img/logo.jpg" class="menu-logo"/>
+    <img src="assets/img/logo.png" class="menu-logo"/>
 
     <ion-list>
       <ion-list-header>
@@ -16,7 +16,7 @@
 
     <ion-list>
       <ion-list-header>
-        Help
+        Autres
       </ion-list-header>
       <button menuClose ion-item *ngFor="let menuItem of helpMenuItems" (click)="openPage(menuItem)">
         <ion-icon item-left [name]="menuItem.icon"></ion-icon>
