--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -12,11 +12,27 @@ page-welcome {
       bottom: 0;
       left: 0;
       right: 0;
-      background-color: rgba(163, 19, 178, .8);
+      background-color: rgba(163, 19, 178, .7);
       color: #FFFFFF;
-      padding: 28px 28px 48px 28px;
+      /*padding: 28px 28px 48px 28px;*/
+      padding-top: 28px;
+      padding-bottom: 28px;
+      background-size: cover;
+      font-size: 2.7rem;
+      margin-bottom: 28px;
+    }
+
+    button {
+      position: relative;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: rgba(163, 19, 178, 0);
+      color: #FFFFFF;
+      /*padding: 28px 28px 48px 28px;*/
       font-size: 2.7rem;
       margin-bottom: 0;
+      background-size: cover;
     }
 
     img {
