--- a/src/pages/information/information.scss
+++ b/src/pages/information/information.scss
@@ -1,4 +1,10 @@
 .button{
-	margin-left:30%;
-	margin-right:30%;
+	text-align:center;
+	font-size: 16px;
+	padding: 15px 32px;
+	/* #23415a */
+}
+
+figure {
+	text-align: center;
 }
