--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,10 +24,10 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #A313B2,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
+  primary:    #23415a,
+  secondary:  #23415a,
+  danger:     #23415a,
+  light:      #23415a,
   dark:       #222
 );
 
