Changed welcome page colors

--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -12,7 +12,7 @@ page-welcome {
       bottom: 0;
       left: 0;
       right: 0;
-      background-color: rgba(163, 19, 178, .7);
+      background-color: #23415a;
       color: #FFFFFF;
       /*padding: 28px 28px 48px 28px;*/
       padding-top: 28px;
