--- a/src/pages/actus-list/actus-list.scss
+++ b/src/pages/actus-list/actus-list.scss
@@ -6,6 +6,36 @@ ion-footer {
   padding: 8px 16px !important;
 }
 
-p {
-text-indent: 1em;
+ion-icon.like {
+  margin-left: -25px;
+  margin-right: 5px;
+}
+
+ion-icon.comment {
+  margin-left: -25px;
+  margin-right: 5px;
+}
+
+.wrapping-list .item-content, .wrapping-list .item {
+    overflow: initial;
+    white-space: initial;
+}
+
+ion-card-content.body {
+	padding-bottom: 50px;
+ 
+}
+
+p.body {
+	text-align: justify;
+	height: 50px;
+    overflow: hidden;
+}
+/*
+p.prop {
+	text-indent: 1em;
+}
+*/
+ion-row {
+	margin-bottom: -20px;
 }
