--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -12,8 +12,9 @@ $font-path: "../assets/fonts";
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-
-
+$item-md-detail-push-show: true;
+$item-wp-detail-push-show: true;
+$item-ios-detail-push-show: false;
 
 // Named Color Variables
 // --------------------------------------------------
