fond transparent et bouton auteur

--- a/src/pages/actus-create/actus-create.scss
+++ b/src/pages/actus-create/actus-create.scss
@@ -6,3 +6,12 @@ ion-note {
 textarea {
    resize: both;
 }
+
+.decalage {
+	position: absolute;
+	left: 70px;
+}
+
+.select-ion {
+	padding-left: 20px;
+}
