Correction espaces blancs et orthographe

--- a/src/pages/information/information.scss
+++ b/src/pages/information/information.scss
@@ -8,3 +8,17 @@
 figure {
 	text-align: center;
 }
+
+figure.button1{
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
+figure.button2{
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
+.toolbar-title{
+	overflow: visible;
+}
