--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -34,7 +34,16 @@
 */
 }
 
-.transparent {
+button.transparent {
   background-color: transparent;
+  padding: 0px 0px 0px 0px;
 }
 
+.card-ios{
+  margin: 0px 0px 0px 0px;
+  width: 100%;
+}
+
+.list-ios{
+  margin: 0px 0px 0px 0px;
+}
